--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,24 @@
 
+name: workflow
+
+on:
+    push:
+        branches:
+            - main
+        paths-ignore:
+            - 'README.md'
+
+jobs:
+    integration:
+        name: Continuous Integration
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v3
+
+            - name: Lint code
+              run: echo "Linting Repository..."
+
+            - name: Run unit tests
+              run: echo "Running Unit Tests..."
+
