--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,24 @@
-python-dotenv
-pandas
-numpy
-pymongo
-matplotlib
-seaborn
-certifi
-pymongo
-pymongo[srv]
+python-dotenv>=0.19.0
+pandas>=1.3.0
+numpy>=1.20.0
 pymongo==4.14.1
-scikit-learn
-pyaml
+certifi>=2021.5.30
+scikit-learn>=1.0.0
+pyaml>=21.8.3
 mlflow<3
-xgboost
-lightgbm
-catboost
-dagshub
-fastapi
-uvicorn
+fastapi>=0.68.0
+uvicorn>=0.15.0
 python-multipart>=0.0.5
+
+# ML libraries
+xgboost>=1.5.0
+lightgbm>=3.3.0
+catboost>=1.0.0
+
+# Commented out to save space in container
+# matplotlib>=3.4.0
+# seaborn>=0.11.0
+# dagshub
+
+# Development dependencies (commented out for production)
 # -e .
