--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,6 +83,13 @@ jobs:
           run: |
             docker pull ${{ secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME}}:latest
 
+        - name: Stop and remove existing container if running
+          run: |
+            if docker ps -a --format '{{.Names}}' | grep -q "^networksecurity$"; then
+              docker stop networksecurity || true
+              docker rm networksecurity || true
+            fi
+
         - name: Run Docker Images to serve users
           run: |
             docker run -d -p 8080:8080 --ipc="host" --name=networksecurity -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_REGION=${{ secrets.AWS_REGION }}'  ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
@@ -92,6 +99,6 @@ jobs:
             docker system prune -f
 
 
-            
+
 
 
